Added information about Casper

--- a/casper_friberg.html
+++ b/casper_friberg.html
@@ -8,11 +8,10 @@
 <body>
     <h1>Casper Friberg</h1>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Laga mat</li>
+        <li>Bowling</li>
+        <li>Biljard</li>
+        <li>Spel</li>
     </ul>
-    
 </body>
 </html>
