--- a/casper_friberg.html
+++ b/casper_friberg.html
@@ -6,7 +6,16 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="navbar">
+        <a href="index.html">Home</a>
+        <a href="gustav_hammarin.html">Gustav Hammarin</a>
+        <a href="casper_friberg.html">Casper Friberg</a>
+        <a href="ceres_neikter.html">Ceres Neikter</a>
+        <a href="mikhail_kliuchnikov.html">Mikhail Kliuchnikov</a>
+    </div>
+
     <h1>Casper Friberg</h1>
+    <img src="Casper.jpg" alt="Casper">
     <ul>
         <li>Laga mat</li>
         <li>Bowling</li>
