Added link to GitHub

--- a/casper_friberg.html
+++ b/casper_friberg.html
@@ -22,5 +22,6 @@
         <li>Biljard</li>
         <li>Spel</li>
     </ul>
+    <a href="https://github.com/C-friberg">github</a>
 </body>
 </html>
