--- a/gustav_hammarin.html
+++ b/gustav_hammarin.html
@@ -21,7 +21,7 @@
           <li>Nörda</li>
           <li>Fundera & klura</li>
         </ul>
-        <img src="./me.jpeg"/>
+        <img src="./images/me.jpeg"/>
         <div class="github-container">
           <svg
             width="24px"
