Fixed headings, added links and personalPageStyle.css

--- a/gustav_hammarin.html
+++ b/gustav_hammarin.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="personPageStyle.css">
     <title>GustavsPage</title>
   </head>
   <body>
@@ -13,7 +14,7 @@
     <a href="mikhail_kliuchnikov.html">Mikhail Kliuchnikov</a>
     <div class="container">
       
-      <h1>Gustav Hammarin</h1>
+      <h3>Gustav Hammarin</h3>
       
         <ul>
           <li>Spela gitarr</li>
