--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gr4LandningPage</title>
-</head>
-<body>
-    <h1>HomePage</h1>
-    <a href="gustav_hammarin.html">Gustav Hammarin</a>
-    <a href="casper_friberg.html">Casper Friberg</a>
-    <a href="ceres_neikter.html">Ceres Neikter</a>
-    <a href="mikhail_kliuchnikov.html">Mikhail Kliuchnikov</a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Group 4</title>
+  </head>
+  <body>
+      <h1>HomePage</h1>
+      <a href="gustav_hammarin.html">Gustav Hammarin</a>
+      <a href="casper_friberg.html">Casper Friberg</a>
+      <a href="ceres_neikter.html">Ceres Neikter</a>
+      <a href="mikhail_kliuchnikov.html">Mikhail Kliuchnikov</a>
+  </body>
 </html>
