--- a/casper_friberg.html
+++ b/casper_friberg.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="personPageStyle.css">
     <title>Document</title>
-</head>
-<body>
-    <h1>Casper Friberg</h1>
-    <ul>
+  </head>
+  <body>
+    <div class="container">
+      <h3>Casper Friberg</h3>
+      <ul>
         <li>Laga mat</li>
         <li>Bowling</li>
         <li>Biljard</li>
         <li>Spel</li>
-    </ul>
-</body>
+      </ul>
+    </div>
+  </body>
 </html>
