--- a/mikhail_kliuchnikov.html
+++ b/mikhail_kliuchnikov.html
@@ -1,22 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
+    <script src="navbar.js" defer></script>
     <title>Misha</title>
-</head>
-<body>
+  </head>
+  <body>
+    <div id="navbar"></div>
     <div class="container">
-        <h3>Mikhail (Misha) Kliuchnikov</h3>
-        <ul>Things I am good at:
-            <li>Bad jokes</li>
-            <li>Very bad jokes</li>
-            <li>Terrible jokes</li>
-            <li>Midlane with Zed in League of Legends</li>
-        </ul>
-        <img src="./images/Misha.jpeg" alt="Bild på Mischa">
-        <a href="https://github.com/MikhailKliuchnikov">My GitHub</a>
-        <a href="index.html">Go back</a>
+      <h3>Mikhail (Misha) Kliuchnikov</h3>
+      <ul>
+        Things I am good at:
+        <li>Bad jokes</li>
+        <li>Very bad jokes</li>
+        <li>Terrible jokes</li>
+        <li>Midlane with Zed in League of Legends</li>
+      </ul>
+      <img src="./images/Misha.jpeg" alt="Bild på Mischa" />
+      <a href="https://github.com/MikhailKliuchnikov">My GitHub</a>
+      <a href="index.html">Go back</a>
     </div>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
