--- a/casper_friberg.html
+++ b/casper_friberg.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
+    <script src="navbar.js" defer></script>
     <title>Document</title>
-</head>
-<body>
-    <div id="navbar">
-        <a href="index.html">Home</a>
-        <a href="gustav_hammarin.html">Gustav Hammarin</a>
-        <a href="casper_friberg.html">Casper Friberg</a>
-        <a href="ceres_neikter.html">Ceres Neikter</a>
-        <a href="mikhail_kliuchnikov.html">Mikhail Kliuchnikov</a>
-    </div>
+  </head>
+  <body>
+    <div id="navbar"></div>
 
     <h1>Casper Friberg</h1>
-    <img src="./images/Casper.jpg" alt="Casper">
+    <img src="./images/Casper.jpg" alt="Casper" />
     <ul>
-        <li>Laga mat</li>
-        <li>Bowling</li>
-        <li>Biljard</li>
-        <li>Spel</li>
+      <li>Laga mat</li>
+      <li>Bowling</li>
+      <li>Biljard</li>
+      <li>Spel</li>
     </ul>
     <a href="https://github.com/C-friberg">github</a>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
