--- a/ceres_neikter.html
+++ b/ceres_neikter.html
@@ -1,24 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
+    <script src="navbar.js" defer></script>
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
+    <div id="navbar"></div>
     <div class="container">
-        <h3> Ceres Neikter </h3>
-        <ul> Saker jag kan:
-            <li> Prata (typ) </li>
-            <li> Spela datorspel (hyfsat ok) </li>
-            <li> Bete mig som en person (ganska bra ändå) </li>
-            <li> Baka kladdkaka mitt i natten (S+) </li>
+      <h3>Ceres Neikter</h3>
+      <ul>
+        Saker jag kan:
+        <li>Prata (typ)</li>
+        <li>Spela datorspel (hyfsat ok)</li>
+        <li>Bete mig som en person (ganska bra ändå)</li>
+        <li>Baka kladdkaka mitt i natten (S+)</li>
+      </ul>
 
-        </ul>
-
-        <img src="./images/Ceres.jpg" alt="Bild på Ceres">
-        <a href="https://github.com/ScatteredOrbit">Min GitHub</a>
-        <a href="index.html">Go Back</a>
+      <img src="./images/Ceres.jpg" alt="Bild på Ceres" />
+      <a href="https://github.com/ScatteredOrbit">Min GitHub</a>
+      <a href="index.html">Go Back</a>
     </div>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
