--- a/casper_friberg.html
+++ b/casper_friberg.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div id="navbar"></div>
-
+    <div class="container">
     <h1>Casper Friberg</h1>
     <img src="./images/Casper.jpg" alt="Casper" />
     <ul>
@@ -25,6 +25,7 @@
       <li>Spel</li>
     </ul>
     <a href="https://github.com/C-friberg">github</a>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
