Styled github button

--- a/gustav_hammarin.html
+++ b/gustav_hammarin.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+    <link rel="stylesheet" href="style.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css">
     <script src="navbar.js" defer></script>
     <title>GustavsPage</title>
   </head>
@@ -25,7 +26,7 @@
         <li>Fundera & klura</li>
       </ul>
       <img src="./images/me.jpeg" />
-      <div class="github-container">
+      <button class="github-container">
         <svg
           width="24px"
           height="24px"
@@ -51,7 +52,7 @@
           </g>
         </svg>
         <a href="https://github.com/gustavhammarin">Github Profil</a>
-      </div>
+      </button>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
