--- a/navbar.html
+++ b/navbar.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-dark-subtle">
       <div class="container-fluid">
         <button
           class="navbar-toggler"
