--- a/gustav_hammarin.html
+++ b/gustav_hammarin.html
@@ -10,7 +10,6 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css">
     <script src="navbar.js" defer></script>
     <title>GustavsPage</title>
   </head>
@@ -51,7 +50,7 @@
             ></path>
           </g>
         </svg>
-        <a href="https://github.com/gustavhammarin">Github Profil</a>
+        <a class="github-button" href="https://github.com/gustavhammarin">Github Profil</a>
       </button>
     </div>
     <script
