--- a/casper_friberg.html
+++ b/casper_friberg.html
@@ -51,7 +51,7 @@
           </g>
         </svg>
         <a class="github-button" href="https://github.com/C-friberg"
-          >Github Profil</a
+          >Github</a
         >
       </button>
     </div>
