--- a/ceres_neikter.html
+++ b/ceres_neikter.html
@@ -52,7 +52,7 @@
           </g>
         </svg>
         <a class="github-button" href="https://github.com/ScatteredOrbit"
-          >Github Profil</a
+          >Github</a
         >
       </button>
     </div>
