--- a/gustav_hammarin.html
+++ b/gustav_hammarin.html
@@ -50,7 +50,7 @@
             ></path>
           </g>
         </svg>
-        <a class="github-button" href="https://github.com/gustavhammarin">Github Profil</a>
+        <a class="github-button" href="https://github.com/gustavhammarin">Github</a>
       </button>
     </div>
     <script
